--- a/css/moralentropy.webflow.css
+++ b/css/moralentropy.webflow.css
@@ -92,6 +92,10 @@ p {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  background-image: url('../images/photo4-blur.png');
+  background-position: 100% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .navbar {
@@ -117,7 +121,7 @@ p {
 
 .navlink {
   padding-right: 3em;
-  padding-left: 0px;
+  padding-left: 3em;
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
   font-family: Archivo, sans-serif;
@@ -147,10 +151,10 @@ p {
   min-height: 100%;
   padding-right: 32px;
   padding-left: 32px;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -161,6 +165,8 @@ p {
   display: block;
   max-height: 90vh;
   min-height: 90vh;
+  margin-top: 32px;
+  margin-bottom: 32px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -175,12 +181,16 @@ p {
   -ms-flex-align: start;
   align-items: flex-start;
   background-image: url('../images/God-Save-Us-copy.jpg');
-  background-position: 50% 50%;
-  background-size: cover;
+  background-position: 0% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .button {
+  margin-right: auto;
+  margin-left: auto;
   padding: 1em;
+  border: 1px solid #fff;
   background-color: #000;
   opacity: 1;
   -webkit-transition: all 200ms ease;
@@ -219,6 +229,50 @@ p {
   text-transform: uppercase;
 }
 
+@media (max-width: 991px) {
+  .nav-menu {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 767px) {
+  .nav-menu {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+}
+
 @media (max-width: 479px) {
   .container {
     padding-right: 16px;
@@ -236,23 +290,25 @@ p {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-flex-wrap: wrap;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
-    -webkit-align-content: flex-start;
-    -ms-flex-line-pack: start;
-    align-content: flex-start;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -ms-flex-line-pack: center;
+    align-content: center;
   }
   .navlink {
-    margin-left: 0px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
   }
   .navlink:focus {
     border-style: solid;
@@ -283,10 +339,14 @@ p {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
