--- a/css/moralentropy.webflow.css
+++ b/css/moralentropy.webflow.css
@@ -35,10 +35,15 @@ p {
   min-height: 90vh;
   padding-right: 32px;
   padding-left: 32px;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -188,6 +193,7 @@ p {
 
 .button {
   margin-right: auto;
+  margin-bottom: 1em;
   margin-left: auto;
   padding: 1em;
   border: 1px solid #fff;
@@ -204,6 +210,7 @@ p {
 }
 
 .button:hover {
+  border-color: hsla(0, 0%, 100%, 0.32);
   opacity: 1;
   color: hsla(0, 0%, 100%, 0.3);
   text-decoration: line-through;
